# movie-recommend-be

movie/: pyproject.toml
movie/core/: .gitignore  import_movies_and_credits.py
movie/core/authentication/: authentication.py  serializers.py  services.py  urls.py  utils.py  validators.py  views.py
movie/core/cinematch/: apps.py  urls.py  views.py
movie/core/core/: settings.py  urls.py
movie/core/core/base/: choices.py  models.py
movie/core/movies/: admin.py  admin_views.py  models.py  serializers.py  services.py  tmdb_utils.py  urls.py  views.py
movie/core/movies/management/commands/: import_movies.py
movie/core/movies/migrations/: 0001_initial.py  0002_favorite.py  0003_movie_backdrop_path_movie_poster_path.py  0004_remove_userrating_review.py  0005_alter_userrating_rating.py  0006_userreview.py
movie/core/users/: managers.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
movie/core/users/migrations/: 0001_initial.py  0002_alter_customuser_role.py  0003_customuser_status.py  0004_remove_customuser_is_active_customuser_deleted_at_and_more.py  0005_alter_customuser_last_login.py
