[tool.poetry]
name = "movie"
version = "0.1.0"
description = ""
authors = ["OKnischay <nischaybasi015@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.3"
environs = "^14.2.0"
djangorestframework = "^3.16.0"
psycopg2-binary = "^2.9.10"
pyjwt = "^2.10.1"
django-cors-headers = "^4.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
